// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Elements snapshots should render Element in relative position 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp Elements__element Elements__element--light Frame Frame--light Element Element--light"
    data-status="false"
    data-test-element="test-1"
    id="test-1"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 0px; border-top-left-radius: 0px; border-top-right-radius: 0px; left: 0px; top: 0px; transform: rotate(0deg) translate(0, 0); transform-origin: center center; height: 100px; margin: 0px 0px 0px 0px; mix-blend-mode: initial; opacity: 1; overflow: hidden; padding: 0px 0px 0px 0px; position: relative; visibility: visible; width: 100px;"
  >
    <div
      class="css-hnxq09"
      data-test-box=""
    >
      <div
        class="css-9ljzna Prompts Prompts--light"
        data-test-box=""
      />
      <div
        class="css-9ljzna Prompts Prompts--light"
        data-test-box=""
      />
      <div
        class="css-9ljzna Prompts Prompts--light"
        data-test-box=""
      />
      <div
        class="css-9ljzna Prompts Prompts--light"
        data-test-box=""
      />
      <div
        class="css-1xpffs9 Anchors Anchors--light Anchors--bottom Anchors--bottom--light"
        data-test-anchor="bottom"
      />
      <div
        class="css-1xpffs9 Anchors Anchors--light Anchors--top Anchors--top--light"
        data-test-anchor="top"
      />
    </div>
    <div
      class="css-1jnxvbp Frame__wrapper Frame__wrapper--light"
      data-test-box=""
      style="left: 0px; top: 0px; transform: rotate(0deg); height: 100px; width: 100px;"
    >
      <small
        class="css-1jnxvbp Frame__label Frame__label--light Frame__label--top Frame__label--top--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        Frame
      </small>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Elements snapshots should render Elements 1`] = `<DocumentFragment />`;

exports[`Elements snapshots should render Frame 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp Elements__element Elements__element--light Frame Frame--light Element Element--light"
    data-status="false"
    data-test-element="test-1"
    id="test-1"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 0px; border-top-left-radius: 0px; border-top-right-radius: 0px; left: 0px; top: 0px; transform: rotate(0deg) translate(0, 0); transform-origin: center center; height: 100px; margin: 0px 0px 0px 0px; mix-blend-mode: initial; opacity: 1; overflow: hidden; padding: 0px 0px 0px 0px; position: absolute; visibility: visible; width: 100px;"
  >
    <div
      class="css-1jnxvbp Frame__wrapper Frame__wrapper--light"
      data-test-box=""
      style="height: 100px; left: 0px; top: 0px; transform: rotate(0deg); width: 100px;"
    >
      <small
        class="css-1jnxvbp Frame__label Frame__label--light Frame__label--top Frame__label--top--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        Frame
      </small>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Elements snapshots should render default Element 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp GridDropArea GridDropArea--light"
    data-test-box="grid-drop-area"
  />
</DocumentFragment>
`;

exports[`Elements snapshots should render when possible Element 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp Elements__element Elements__element--light Frame Frame--light Element Element--light"
    data-status="false"
    data-test-element="test-1"
    id="test-1"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 0px; border-top-left-radius: 0px; border-top-right-radius: 0px; left: 0px; top: 0px; transform: rotate(0deg) translate(0, 0); transform-origin: center center; height: 100px; margin: 0px 0px 0px 0px; mix-blend-mode: initial; opacity: 1; overflow: hidden; padding: 0px 0px 0px 0px; position: absolute; visibility: visible; width: 100px;"
  >
    <div
      class="css-1jnxvbp Frame__wrapper Frame__wrapper--light"
      data-test-box=""
      style="height: 100px; left: 0px; top: 0px; transform: rotate(0deg); width: 100px;"
    >
      <small
        class="css-1jnxvbp Frame__label Frame__label--light Frame__label--top Frame__label--top--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        Frame
      </small>
    </div>
  </div>
  <div
    class="css-1wum52v PossibleElement PossibleElement--light"
    data-test-box=""
    style="height: 0px; left: 0px; position: absolute; top: 0px; width: 0px;"
  >
    <small
      class="css-7yjcvi PossibleElement__label PossibleElement__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
      data-test-text=""
      style="width: 0px; text-align: inherit;"
    >
      Frame
    </small>
    <svg
      class="Corners Corners--light"
      style="height: 0px; left: 0px; top: 0px; width: 0px;"
    >
      <rect
        height="6"
        rx="1.5"
        width="6"
        x="-3"
        y="-3"
      />
      <rect
        height="6"
        rx="1.5"
        width="6"
        x="-3"
        y="-4.5"
      />
      <rect
        height="6"
        rx="1.5"
        width="6"
        x="-4.5"
        y="-3"
      />
      <rect
        height="6"
        rx="1.5"
        width="6"
        x="-4.5"
        y="-4.5"
      />
    </svg>
  </div>
</DocumentFragment>
`;
